...
                        }
                    }
                    .padding(.vertical, 8)
                }
            }
            .swipeActionsContainer()
            .accessibilityIdentifier("Library Grid")
            .contentMargins(.horizontal, metrics.horizontalMargin, for: .scrollContent)
            .contentMargins(.bottom, 72, for: .scrollContent)
        }
    }
}

